# Geant4NuInt

./: .gitignore  Dockerfile  README.md
.github/workflows/: build-and-test.yml  build-test-deploy.yml
neutrino_demo/: #SteppingAction.hh#  .#simple_det.gdml  .gitignore  CMakeLists.txt  CMakeLists.txt~  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  EventAction.cc~  EventAction.hh  EventAction.hh~  MyNeutrinoPhysics.hh  MyPhysicsList.cc  PrimaryGenerator.cc  PrimaryGenerator.cc~  PrimaryGenerator.hh  PrimaryGenerator.hh~  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger.hh  README.md  RunAction.cc  RunAction.cc~  RunAction.hh  RunAction.hh~  SteppingAction.cc  main.cc  main.cc~  run.mac  run.mac~  simple_det.gdml~
neutrino_demo/neutrino_demo/: ActionInitialization.cc  ActionInitialization.hh  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  DetectorMessenger.cc  EventAction.cc  EventAction.hh  MyNeutrinoPhysics.cc  MyPhysicsList.hh  PrimaryGenerator.cc  PrimaryGenerator.hh  PrimaryGeneratorMessenger.cc  PrimaryGeneratorMessenger.hh  RunAction.cc  RunAction.hh  SteppingAction.hh  main.cc  simple_det.gdml
newGeant4DockerImage/: Analyze1GeVElectronRoot.ipynb  Analyzer.ipynb  Dockerfile~  LongDocF  electron20gev.root  muon.root  neutrino.root  neutrino1.root  neutrinoNEW.root  nue1GeV.root  nue20GeV_smallbias.root  nue20geV.root  nue50geV.root  numu.root  numu10GeV.root  numu10MeV.root  numu15GeV.root  numu5GeV.root  output.root  proton.root
newGeant4DockerImage/geantwithvisual/: Dockerfile  Untitled.ipynb  (+2 more)
run/: run.mac
(+41 files in other folders)
